# aurascribe

./: .env.example  .gitignore  CLAUDE.md  README.md  aurascribe.db  index.html  main.py  package-lock.json  package.json  requirements.txt  tray.py  vite.config.ts
.github/workflows/: release.yml
backend/: api.py  config.py  meeting_manager.py
backend/audio/: capture.py  enrollment.py
backend/db/: database.py
backend/llm/: client.py  prompts.py
backend/obsidian/: writer.py
backend/transcription/: engine.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: EnrollmentModal.tsx  MeetingList.tsx  RecordingBar.tsx  SummaryPanel.tsx  TranscriptView.tsx
frontend/src/lib/: api.ts  useWebSocket.ts
scripts/: build-sidecar.cjs  build_frontend.sh  logs.sh  setup.sh
sidecar/: README.md  aurascribe-sidecar.spec  build.ps1  build.sh  main.py  pyproject.toml
sidecar/aurascribe/: __init__.py  api.py  auto_capture.py  config.py  cuda_runtime.py  meeting_manager.py  tasks.py
sidecar/aurascribe/audio/: capture.py  enrollment.py  ffmpeg.py  naming.py  vad_model.py
sidecar/aurascribe/db/: database.py
sidecar/aurascribe/llm/: analysis.py  bucket_inference.py  client.py  daily_brief.md  daily_brief.py  live_intelligence.md  meeting_analysis.md  meeting_bucket.md  meeting_title_refinement.md  prompts.py  realtime.py  realtime_highlights.md  sampling.py  title_refinement.py
sidecar/aurascribe/obsidian/: writer.py
sidecar/aurascribe/routes/: __init__.py  _shared.py  daily_brief.py  intel.py  meetings.py  settings.py  voices.py
sidecar/aurascribe/transcription/: __init__.py  engine.py  whisper.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.cuda.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AutoCaptureChip.tsx  Avatar.tsx  EngineErrorDialog.tsx  EnrollmentModal.tsx  ErrorBoundary.tsx  Header.tsx  Logo.tsx  MeetingList.tsx  RecordingBar.tsx  Shell.tsx  Sidebar.tsx  TitleSuggestPopover.tsx  TranscriptView.tsx  VuMeter.tsx  Waveform.tsx  WelcomeDialog.tsx
src/lib/: MicAudioContext.tsx  api.ts  speakerColors.ts  time.ts  useClockTick.ts  useEscapeKey.ts  useLLMHealth.ts  useSidecarAudioLevel.ts  useWebSocket.ts
src/pages/: DailyBrief.tsx  Enrollment.tsx  LiveFeed.tsx  MeetingLibrary.tsx  Review.tsx  Settings.tsx  Voices.tsx
tools/: llm-endpoint-check.html
