[package]
name = "aurascribe"
version = "0.1.0"
description = "AuraScribe — local meeting transcription"
edition = "2021"
rust-version = "1.77"

[lib]
name = "aurascribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native error dialogs for pre-window startup failures (sidecar spawn, Tauri
# context build). On Windows this resolves to MessageBoxW — no extra deps.
rfd = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
