[package]
name = "aurascribe"
version = "0.1.0"
description = "AuraScribe — local meeting transcription"
edition = "2021"
rust-version = "1.77"

[lib]
name = "aurascribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native error dialogs for pre-window startup failures (sidecar spawn, Tauri
# context build). On Windows this resolves to MessageBoxW — no extra deps.
rfd = "0.15"
# Cross-platform process enumeration. Used at startup to detect and kill
# orphan Python sidecars left behind by a prior AuraScribe crash, so the
# fresh sidecar is guaranteed the canonical port (8765) and the frontend
# doesn't end up talking to stale code.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
